# LogRecorded

./: Cargo.toml  README.md
examples/: per_service.rs  postgres.rs  shared_table.rs
examples_backends/: custom_backend_example.rs  kafka_example.rs  opensearch_example.rs  postgres_example.rs
examples_load/: custom_load.rs  default_load.rs
migrations/: postgres.sql
migrations/clickhouse/: per_service.sql  shared_table.sql
src/: backend.rs  clickhouse.rs  env.rs  init.rs  kafka.rs  layer.rs  lib.rs  noop_sink.rs  opensearch.rs  postgres.rs  record.rs  sink.rs
