[package]
name = "tracing-log-sink"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Your Name <you@example.com>"]
description = "Async tracing layer that ships error! events to pluggable backends like ClickHouse."
repository = ""

[lib]
name = "tracing_log_sink"
path = "src/lib.rs"

[[example]]
name = "default_load"
path = "examples_load/default_load.rs"

[[example]]
name = "custom_load"
path = "examples_load/custom_load.rs"

[features]
default = ["clickhouse"]
clickhouse = ["reqwest", "serde_json"]
loki = []
console = []

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "registry"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

# HTTP client for ClickHouse JSONEachRow ingestion
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }

urlencoding = "2"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
